Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3395

Old HJ table filters use wrong expr type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.5.0
    • Impala 2.6.0, impala 2.5.1
    • Backend
    • None

    Description

            void* e = filter_expr_ctxs_[i]->GetValue(row);
            uint32_t h =
                RawValue::GetHashValue(e, build_expr_ctxs_[i]->root()->type(), <------- should be filter_expr_ctxs_
                    RuntimeFilterBank::DefaultHashSeed());
            bloom_filters[i]->Insert(h);
      

      Attachments

        Activity

          People

            henryr Henry Robinson
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: