IMPALA-3395: Old HT filter code uses wrong expr type

IMPALA-3077 uncovered this, as filters are built in all cases now, so
one existing test case started triggering this problem.

Change-Id: Icd9c15770263dd3f3cbd42a55791548ab922dad1
Reviewed-on: http://gerrit.cloudera.org:8080/2836
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Internal Jenkins